fix : wrap 과 footer의 세로길이 조정

--- a/src/main/webapp/resources/css/default.css
+++ b/src/main/webapp/resources/css/default.css
@@ -21,7 +21,7 @@ a {
 #wrap {
     /* max-width: 1200px; */
     width: 1200px;
-    min-height: 100vh;
+    min-height: calc(97vh - 34px);
     margin: 0 auto;
     /* padding: 20px; */
     margin: 0 auto;
@@ -111,7 +111,7 @@ a {
 
 /* 페이지 하단 */
 #footer {
-    padding: 50px 0 10px;
+    padding: 3vh 0 10px;
     background: #e53935;
     color: #eee;
 
